# elekter

./: .clangd  CMakeLists.txt  README.md  app.cpp  app.h  args.cpp  args.h  cache.cpp  cache.h  common.cpp  common.h  consumption.cpp  consumption.h  header.cpp  header.h  json.cpp  json.h  main.cpp  nordpool.cpp  nordpool.h  prices.cpp  prices.h  record.cpp  record.h  vcpkg.json
sample/: tarbimisandmed.csv
